# election-ai-safety

./: .gitignore  README.md  pyproject.toml
data/: models.csv
data/evals/: param_map.json  parameters.json
data/evals/baseline/: eval.csv  eval.jsonl  prompts.csv  results.csv  variables.json
data/evals/judge/: settings.json  template.txt
data/evals/mps/: mps.csv  prompts.csv  results.csv  variables.json
data/evals/voting/: prompts.csv  results.csv  variables.json
data/experiments/exp1b/: proportions.csv
data/experiments/exp2/: proportions.csv
data/experiments/mp_l/: proportions.csv
notebooks/: analyse_evals.ipynb
src/: utils.py
src/api_calls/: gpt2_api.py
src/evals/: judge.py  make_evals.py  process_results.py  similaritymeasure.py
src/experiments/: paper_plots.R  plotting.R  regression.R
